// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mount and unmount component could be updated and unmounted without errors 1`] = `
<DocumentFragment>
  <p
    class="container-0-2-17 text-0-2-13 regular-0-2-4"
    dir="auto"
  />
</DocumentFragment>
`;

exports[`mount and unmount component could be updated and unmounted without errors 2`] = `
<DocumentFragment>
  <p
    class="container-0-2-17 text-0-2-13 regular-0-2-4"
    dir="auto"
    style="font-size: 16px;"
  />
</DocumentFragment>
`;

exports[`mount and unmount component could be updated and unmounted without errors 3`] = `
<DocumentFragment>
  <p
    class="container-0-2-17 text-0-2-13 regular-0-2-4"
    dir="auto"
  />
</DocumentFragment>
`;

exports[`mount and unmount component could be updated and unmounted without errors 4`] = `
<DocumentFragment>
  <p
    class="container-0-2-17 text-0-2-13 regular-0-2-4"
    dir="auto"
    style="font-size: 14px;"
  />
</DocumentFragment>
`;
